Add donation info link

--- a/src/index.pug
+++ b/src/index.pug
@@ -131,6 +131,9 @@ html(lang="en-CA")
 							| Please note that only Canadian citizens who are eligible to vote can donate.
 						p
 							| To keep us compliant, please send an e-transfer to #[a(href="mailto:team@votemarkwiens.ca") team@votemarkwiens.ca], as well as filling in this form.
+						p
+							a(href="https://elections.bc.ca/local-elections/making-a-campaign-contribution/")
+								| Click here to learn more about making a donation.
 					include partial/donate-form.pug
 
 			footer#footer.dark
