--- a/src/partial/donate-form.pug
+++ b/src/partial/donate-form.pug
@@ -5,7 +5,7 @@ form.styled(netlify netlify-honeypot="truly-important-information" name="donate"
 			span.visually-hidden in dollars
 		span(style="display: flex; gap: 0.5em; align-items: center;")
 			span(aria-hidden) $
-			input#donate-amount(type="number" name="amount" required autocomplete="off" style="flex-grow: 1")
+			input#donate-amount(type="number" name="amount" required autocomplete="off" style="flex-grow: 1" min="0" max="1402.40")
 	fieldset
 		label(for="donate-name") Name
 		input#donate-name(type="text" name="name" required autocomplete="name")
